# py-module-parser

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.txt  LICENSE  README.md  build.sh  pyproject.toml
.github/workflows/: main.yml
example/: example.py
py_module_parser/: __init__.py  models.py  parser.py  utils.py
tests/: test_py_module_parser.py
tests/test_data/: dataclass_.py  django_.py  encode_orm_.py  gino_orm_.py  pydal_.py
